--- a/index.html
+++ b/index.html
@@ -20,63 +20,55 @@
           margin: 0; padding: 0; 
           height: 100%; width: 100%;
           overflow: hidden; 
-          position: fixed; /* Stops screen from bouncing */
+          position: fixed;
       }
 
       #root {
           height: 100%;
           display: flex;
           flex-direction: column;
+          background-color: #0B1E3F; /* The background of the whole app */
       }
 
-      /* FIX: Pushes Header content below the Notch */
+      /* HEADER: Notch protection only at the top */
       .app-header {
           background-color: #0B1E3F;
-          padding-top: calc(env(safe-area-inset-top) + 10px);
-          padding-bottom: 12px;
+          padding-top: env(safe-area-inset-top);
           flex-shrink: 0;
           z-index: 100;
       }
       
       .header-content {
-          height: 40px;
+          height: 54px; 
           display: flex;
           align-items: center;
           justify-content: center;
           position: relative;
-          width: 100%;
       }
 
-      /* Your Cream/Scroll Area */
+      /* MAIN CONTENT: No bottom blue bar, cream goes to the end */
       .main-content {
           flex: 1;
           overflow-y: auto;
+          background-color: #FCFBF4;
           border-top-left-radius: 35px;
           border-top-right-radius: 35px;
           -webkit-overflow-scrolling: touch;
+          padding-bottom: 40px; /* Space for the iPhone home line */
       }
 
       .index-bar {
           display: flex;
           overflow-x: auto;
-          padding: 8px 15px;
+          padding: 10px 15px;
           gap: 10px;
-          background: rgba(0,0,0,0.15);
+          background: rgba(0,0,0,0.2);
           scrollbar-width: none;
       }
       .index-bar::-webkit-scrollbar { display: none; }
 
-      /* FOOTER: Minimized blue space */
-      .app-footer {
-          background-color: #0B1E3F;
-          height: env(safe-area-inset-bottom);
-          flex-shrink: 0;
-      }
-
       .font-heading { font-family: 'Cinzel', serif; }
       .font-arabic { font-family: 'Scheherazade New', 'Amiri', serif; line-height: 2.2; }
-      .animate-in { animation: fadeIn 0.25s ease-out; }
-      @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
       
       .modal-overlay {
           position: fixed;
@@ -2078,7 +2070,7 @@
       // FULL SMART UI (Restored Index & Allah Names)
       // ==========================================
 
-     const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#D4AF37" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
+    const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#D4AF37" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
       const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="m15 18-6-6 6-6"/></svg>;
 
       const THEMES = {
@@ -2154,15 +2146,15 @@
                 {jumps.length > 0 && (
                   <div className="index-bar">
                     {jumps.map((t, i) => (
-                      <button key={i} onClick={() => {document.getElementById(t.id)?.scrollIntoView({behavior:'smooth'})}} className="whitespace-nowrap px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#D4AF37]/30 text-[#D4AF37] uppercase bg-black/10 active:bg-white/10">{t.text}</button>
+                      <button key={i} onClick={() => {document.getElementById(t.id)?.scrollIntoView({behavior:'smooth'})}} className="whitespace-nowrap px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#D4AF37]/30 text-[#D4AF37] uppercase bg-black/10">{t.text}</button>
                     ))}
                   </div>
                 )}
               </div>
-              <main ref={scrollRef} className="main-content animate-in" style={{ backgroundColor: theme.bg }}>
-                <div className="max-w-md mx-auto p-5 pb-20">
+              <main ref={scrollRef} className="main-content" style={{ backgroundColor: theme.bg }}>
+                <div className="max-w-md mx-auto p-5 pb-10">
                   {page.cards.map((card, idx) => (
-                    <div key={idx} style={{backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.cardBg}} className="mb-6 p-6 border-[3px] border-double border-[#D4AF37]/40 rounded-[2.2rem] shadow-sm">
+                    <div key={idx} style={{backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.cardBg}} className="mb-6 p-6 border-[3px] border-double border-[#D4AF37]/40 rounded-[2.2rem] shadow-sm animate-in">
                       {card.content.map((block, bIdx) => renderBlock(block, bIdx, card.variant, block._jumpId))}
                     </div>
                   ))}
@@ -2196,7 +2188,6 @@
         return (
           <div className="flex flex-col h-full bg-[#0B1E3F]">
             {activePageId ? renderPage() : renderMenu()}
-            <footer className="app-footer"></footer>
 
             {showSettings && (
               <div className="modal-overlay" onClick={() => setShowSettings(false)}>
