--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       }
 
       #root {
-          height: 100vh; /* Force app to fill the whole screen */
+          height: 100vh;
           display: flex;
           flex-direction: column;
       }
 
-      /* HEADER: Notch protection */
+      /* FIXED TOP: Protects title from Notch */
       .app-header {
           background-color: #0B1E3F;
           padding-top: env(safe-area-inset-top);
@@ -46,20 +46,19 @@
           padding: 0 20px;
       }
 
-      /* MAIN CONTENT: flex-1 makes it push the footer to the very bottom */
+      /* MAIN CONTENT: Grows to fill screen */
       .main-content {
           flex: 1; 
           overflow-y: auto;
-          background-color: #FCFBF4;
           border-top-left-radius: 35px;
           border-top-right-radius: 35px;
           -webkit-overflow-scrolling: touch;
       }
 
-      /* FOOTER: This is your "little blue" bar. It is locked to 25px */
+      /* FIXED BOTTOM: Exactly 15px as requested */
       .app-footer {
           background-color: #0B1E3F;
-          height: 25px; 
+          height: 15px; 
           flex-shrink: 0;
       }
 
@@ -75,6 +74,8 @@
 
       .font-heading { font-family: 'Cinzel', serif; }
       .font-arabic { font-family: 'Scheherazade New', 'Amiri', serif; line-height: 2.2; }
+      .animate-in { animation: fadeIn 0.25s ease-out; }
+      @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
       
       .modal-overlay {
           position: fixed;
@@ -109,10 +110,6 @@
         { id: 'm12', label: '40 Rabbana Duas', pageId: 'p12', subtext: 'Quranic' },
         { id: 'm13', label: 'Khatm-e-Qadiriyah', pageId: 'p13', subtext: 'Ghaus-e-Azam' },
       ];
-      const createNameEntry = (num, arabic, english) => [
-        { type: 'allah-name', number: num, arabic: arabic, english: english }
-      ];
-
       const createProphetName = (num, arabic, english) => [
         { type: 'allah-name', number: num, arabic: arabic, english: english }
       ];
@@ -2076,7 +2073,7 @@
       // FULL SMART UI (Restored Index & Allah Names)
       // ==========================================
 
-    const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#D4AF37" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
+   const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#D4AF37" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
       const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="m15 18-6-6 6-6"/></svg>;
 
       const THEMES = {
@@ -2096,7 +2093,7 @@
           if (scrollRef.current) scrollRef.current.scrollTop = 0;
         }, [activePageId]);
 
-        const renderBlock = (block, idx, blockId) => {
+        const renderBlock = (block, idx, cardVariant, blockId) => {
           if (!block) return null;
           const aSize = 32 + (fontScale * 2);
           const eSize = 18 + (fontScale * 1);
