--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
           overflow: hidden; 
           position: fixed;
       }
-      #root {
-          height: 100%;
-          display: flex;
-          flex-direction: column;
-          background-color: #0B1E3F;
-      }
+      #root { height: 100%; display: flex; flex-direction: column; }
+
+      /* TOP NOTCH FIX */
       .app-header {
           background-color: #0B1E3F;
           padding-top: env(safe-area-inset-top);
@@ -35,39 +32,39 @@
           z-index: 100;
       }
       .header-content {
-          height: 54px; 
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          position: relative;
-          padding: 0 20px;
+          height: 54px; display: flex; align-items: center;
+          justify-content: center; position: relative; padding: 0 20px;
       }
+
+      /* MAIN CONTENT AREA */
       .main-content {
-          flex: 1; 
-          overflow-y: auto;
-          border-top-left-radius: 35px;
-          border-top-right-radius: 35px;
+          flex: 1; overflow-y: auto;
+          border-top-left-radius: 35px; border-top-right-radius: 35px;
           -webkit-overflow-scrolling: touch;
       }
-      .app-footer {
-          background-color: #0B1E3F;
-          height: 15px; 
-          flex-shrink: 0;
-      }
+
+      /* INDEX BAR */
       .index-bar {
-          display: flex;
-          overflow-x: auto;
-          padding: 10px 15px;
-          gap: 10px;
-          background: rgba(0,0,0,0.2);
-          scrollbar-width: none;
+          display: flex; overflow-x: auto; padding: 10px; gap: 8px;
+          background: rgba(0,0,0,0.2); scrollbar-width: none;
       }
       .index-bar::-webkit-scrollbar { display: none; }
+
+      /* BOTTOM BAR: FIXED 15PX */
+      .app-footer {
+          background-color: #0B1E3F;
+          height: 15px; flex-shrink: 0;
+      }
+
       .font-heading { font-family: 'Cinzel', serif; }
       .font-arabic { font-family: 'Scheherazade New', 'Amiri', serif; line-height: 2.2; }
       .animate-in { animation: fadeIn 0.25s ease-out; }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-      .modal-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 200; display: flex; align-items: flex-end; }
+      
+      .modal-overlay {
+          position: fixed; inset: 0; background: rgba(0,0,0,0.7);
+          z-index: 200; display: flex; align-items: flex-end;
+      }
       .theme-btn { width: 50px; height: 50px; border-radius: 50%; border: 3px solid #eee; }
       .theme-btn.active { border-color: #D4AF37; transform: scale(1.1); }
     </style>
@@ -77,6 +74,7 @@
     <script type="text/babel">
       const { useState, useEffect, Fragment, useRef } = React;
 
+      // 1. MENU
       const MENU_ITEMS = [
         { id: 'm1', label: 'Opening Dua', pageId: 'p1' },
         { id: 'm2', label: 'Names of Allah', pageId: 'p2' },
@@ -92,7 +90,6 @@
         { id: 'm12', label: '40 Rabbana Duas', pageId: 'p12', subtext: 'Quranic' },
         { id: 'm13', label: 'Khatm-e-Qadiriyah', pageId: 'p13', subtext: 'Ghaus-e-Azam' },
       ];
-
       const createProphetName = (num, arabic, english) => [
         { type: 'allah-name', number: num, arabic: arabic, english: english }
       ];
@@ -2076,7 +2073,7 @@
           if (scrollRef.current) scrollRef.current.scrollTop = 0;
         }, [activePageId]);
 
-        const renderBlock = (block, idx, cardVariant, blockId) => {
+        const renderBlock = (block, idx, blockId) => {
           if (!block) return null;
           const aSize = 32 + (fontScale * 2);
           const eSize = 18 + (fontScale * 1);
@@ -2098,7 +2095,7 @@
                     <span className="font-bold text-lg text-[#8B0000]">{block.number}</span>
                     <span className="font-arabic font-bold text-[#1a237e]" style={{ fontSize: `${aSize + 6}px` }}>{block.arabic}</span>
                   </div>
-                  <div className="font-bold opacity-60 text-[13px] text-[#8B0000] uppercase tracking-tighter">{block.english}</div>
+                  <div className="font-bold opacity-60 text-[13px] text-[#8B0000] uppercase">{block.english}</div>
                 </div>
               );
             case 'flower-icon': return <div key={idx} className="text-center text-xl my-4 text-[#2e7d32]">{block.text}</div>;
@@ -2110,8 +2107,7 @@
 
         const renderPage = () => {
           const page = PAGES_DATA[activePageId];
-          if (!page) return <div className="p-10 text-white text-center">Data Error: Page Not Found</div>;
-          
+          if (!page) return <div className="p-10 text-white text-center font-heading">PAGE DATA MISSING</div>;
           const jumps = [];
           let jId = 0;
           page.cards.forEach(card => card.content.forEach(block => {
@@ -2126,23 +2122,23 @@
             <Fragment>
               <div className="app-header shadow-md">
                 <div className="header-content">
-                  <button onClick={() => setActivePageId(null)} className="absolute left-5"><IconBack /></button>
+                  <button onClick={() => setActivePageId(null)} className="absolute left-5 active:opacity-50"><IconBack /></button>
                   <h1 className="font-heading font-bold text-[14px] tracking-widest uppercase text-white truncate px-10 text-center">{page.title}</h1>
-                  <button onClick={() => setShowSettings(true)} className="absolute right-5"><IconSettings /></button>
+                  <button onClick={() => setShowSettings(true)} className="absolute right-5 active:scale-90"><IconSettings /></button>
                 </div>
                 {jumps.length > 0 && (
                   <div className="index-bar">
                     {jumps.map((t, i) => (
-                      <button key={i} onClick={() => {document.getElementById(t.id)?.scrollIntoView({behavior:'smooth'})}} className="whitespace-nowrap px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#D4AF37]/30 text-[#D4AF37] uppercase bg-black/10">{t.text}</button>
+                      <button key={i} onClick={() => {document.getElementById(t.id)?.scrollIntoView({behavior:'smooth'})}} className="whitespace-nowrap px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#D4AF37]/30 text-[#D4AF37] uppercase bg-black/10 active:bg-white/10">{t.text}</button>
                     ))}
                   </div>
                 )}
               </div>
-              <main ref={scrollRef} className="main-content" style={{ backgroundColor: theme.bg }}>
+              <main ref={scrollRef} className="main-content animate-in" style={{ backgroundColor: theme.bg }}>
                 <div className="max-w-md mx-auto p-5 pb-10">
                   {page.cards.map((card, idx) => (
-                    <div key={idx} style={{backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.cardBg}} className="mb-6 p-6 border-[3px] border-double border-[#D4AF37]/40 rounded-[2.2rem] shadow-sm animate-in">
-                      {card.content.map((block, bIdx) => renderBlock(block, bIdx, card.variant, block._jumpId))}
+                    <div key={idx} style={{backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.cardBg}} className="mb-6 p-6 border-[3px] border-double border-[#D4AF37]/40 rounded-[2.2rem] shadow-sm">
+                      {card.content.map((block, bIdx) => renderBlock(block, bIdx, block._jumpId))}
                     </div>
                   ))}
                 </div>
@@ -2154,9 +2150,9 @@
         const renderMenu = () => (
           <Fragment>
             <div className="app-header">
-               <div className="header-content">
+               <div className="header-content h-[80px]">
                  <h1 className="font-heading font-bold text-[22px] text-[#D4AF37] tracking-widest uppercase mt-4">Qalb-e-Dua</h1>
-                 <button onClick={() => setShowSettings(true)} className="absolute right-6 top-8"><IconSettings /></button>
+                 <button onClick={() => setShowSettings(true)} className="absolute right-6 top-10 active:scale-90"><IconSettings /></button>
                </div>
             </div>
             <main ref={scrollRef} className="main-content" style={{ backgroundColor: theme.bg }}>
@@ -2173,7 +2169,7 @@
         );
 
         return (
-          <div className="flex flex-col h-full">
+          <div className="flex flex-col h-full bg-[#0B1E3F]">
             {activePageId ? renderPage() : renderMenu()}
             <footer className="app-footer"></footer>
 
@@ -2182,15 +2178,15 @@
                 <div className="w-full max-w-sm bg-white rounded-t-[35px] p-8 pb-12 animate-in" onClick={e => e.stopPropagation()} style={{ backgroundColor: theme.bg, color: theme.text }}>
                   <h3 className="text-center font-heading font-bold text-lg mb-8 tracking-widest">SETTINGS</h3>
                   <div className="mb-8 text-center">
-                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4">Font Size</p>
+                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4 text-center">Script Size</p>
                     <div className="flex items-center justify-between bg-black/5 rounded-2xl p-2">
-                       <button onClick={() => setFontScale(s => Math.max(s-2, -6))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl">-</button>
+                       <button onClick={() => setFontScale(s => Math.max(s-2, -6))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl active:scale-90">-</button>
                        <span className="font-arabic text-2xl font-bold">بِسْمِ</span>
-                       <button onClick={() => setFontScale(s => Math.min(s+2, 14))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl">+</button>
+                       <button onClick={() => setFontScale(s => Math.min(s+2, 14))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl active:scale-90">+</button>
                     </div>
                   </div>
                   <div className="mb-10 text-center">
-                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4">Background</p>
+                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4 text-center">Theme Color</p>
                     <div className="flex justify-around">
                       <button onClick={() => setTheme(THEMES.cream)} className={`theme-btn ${theme.id==='cream'?'active':''}`} style={{backgroundColor:'#FCFBF4'}} />
                       <button onClick={() => setTheme(THEMES.white)} className={`theme-btn ${theme.id==='white'?'active':''}`} style={{backgroundColor:'#FFF'}} />
