--- a/index.html
+++ b/index.html
@@ -15,58 +15,60 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
+      /* FORCE EVERYTHING TO BE BLUE BEHIND THE CONTENT */
       html, body { 
           background-color: #0B1E3F !important; 
           margin: 0; padding: 0; 
-          height: 100%; width: 100%;
+          height: 100vh; width: 100vw;
           overflow: hidden; 
           position: fixed;
       }
       #root { height: 100%; display: flex; flex-direction: column; }
 
-      /* TOP NOTCH FIX */
+      /* HEADER: Pushed down 20px extra so the Notch CANNOT hide it */
       .app-header {
           background-color: #0B1E3F;
-          padding-top: env(safe-area-inset-top);
+          padding-top: calc(env(safe-area-inset-top) + 15px);
+          padding-bottom: 15px;
           flex-shrink: 0;
           z-index: 100;
       }
       .header-content {
-          height: 54px; display: flex; align-items: center;
+          height: 30px; display: flex; align-items: center;
           justify-content: center; position: relative; padding: 0 20px;
       }
 
-      /* MAIN CONTENT AREA */
+      /* MAIN CONTENT: flex-grow forces this to be the biggest part */
       .main-content {
-          flex: 1; overflow-y: auto;
-          border-top-left-radius: 35px; border-top-right-radius: 35px;
+          flex-grow: 1; 
+          overflow-y: auto;
+          border-top-left-radius: 40px; border-top-right-radius: 40px;
           -webkit-overflow-scrolling: touch;
+          background-color: #FCFBF4;
       }
 
-      /* INDEX BAR */
+      /* FOOTER: Reduced to 12px. This is the smallest blue line possible */
+      .app-footer {
+          background-color: #0B1E3F;
+          height: 12px !important; 
+          flex-shrink: 0;
+      }
+
       .index-bar {
           display: flex; overflow-x: auto; padding: 10px; gap: 8px;
           background: rgba(0,0,0,0.2); scrollbar-width: none;
       }
       .index-bar::-webkit-scrollbar { display: none; }
 
-      /* BOTTOM BAR: FIXED 15PX */
-      .app-footer {
-          background-color: #0B1E3F;
-          height: 15px; flex-shrink: 0;
-      }
-
       .font-heading { font-family: 'Cinzel', serif; }
       .font-arabic { font-family: 'Scheherazade New', 'Amiri', serif; line-height: 2.2; }
-      .animate-in { animation: fadeIn 0.25s ease-out; }
-      @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
       
       .modal-overlay {
-          position: fixed; inset: 0; background: rgba(0,0,0,0.7);
+          position: fixed; inset: 0; background: rgba(0,0,0,0.8);
           z-index: 200; display: flex; align-items: flex-end;
       }
-      .theme-btn { width: 50px; height: 50px; border-radius: 50%; border: 3px solid #eee; }
-      .theme-btn.active { border-color: #D4AF37; transform: scale(1.1); }
+      .theme-btn { width: 55px; height: 55px; border-radius: 50%; border: 3px solid #ddd; }
+      .theme-btn.active { border-color: #D4AF37; transform: scale(1.15); }
     </style>
 </head>
 <body>
@@ -74,7 +76,6 @@
     <script type="text/babel">
       const { useState, useEffect, Fragment, useRef } = React;
 
-      // 1. MENU
       const MENU_ITEMS = [
         { id: 'm1', label: 'Opening Dua', pageId: 'p1' },
         { id: 'm2', label: 'Names of Allah', pageId: 'p2' },
@@ -2053,8 +2054,8 @@
       // STABLE SMART UI (Fixed 15px Footer & Notch)
       // ==========================================
 
-      const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#D4AF37" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
-      const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="m15 18-6-6 6-6"/></svg>;
+       const IconSettings = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#D4AF37" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
+      const IconBack = () => <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="white" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="m15 18-6-6 6-6"/></svg>;
 
       const THEMES = {
         cream: { id: 'cream', bg: '#FCFBF4', text: '#2D241E', cardBg: '#FFF' },
@@ -2107,10 +2108,9 @@
 
         const renderPage = () => {
           const page = PAGES_DATA[activePageId];
-          if (!page) return <div className="p-10 text-white text-center font-heading">PAGE DATA MISSING</div>;
           const jumps = [];
           let jId = 0;
-          page.cards.forEach(card => card.content.forEach(block => {
+          page?.cards.forEach(card => card.content.forEach(block => {
             if (block.type === 'section-title' || block.type === 'title-green') {
               const uid = `nav-${jId++}`;
               block._jumpId = uid;
@@ -2120,22 +2120,22 @@
 
           return (
             <Fragment>
-              <div className="app-header shadow-md">
+              <div className="app-header">
                 <div className="header-content">
-                  <button onClick={() => setActivePageId(null)} className="absolute left-5 active:opacity-50"><IconBack /></button>
+                  <button onClick={() => setActivePageId(null)} className="absolute left-4 p-2 active:opacity-50"><IconBack /></button>
                   <h1 className="font-heading font-bold text-[14px] tracking-widest uppercase text-white truncate px-10 text-center">{page.title}</h1>
-                  <button onClick={() => setShowSettings(true)} className="absolute right-5 active:scale-90"><IconSettings /></button>
+                  <button onClick={() => setShowSettings(true)} className="absolute right-4 p-2"><IconSettings /></button>
                 </div>
                 {jumps.length > 0 && (
                   <div className="index-bar">
                     {jumps.map((t, i) => (
-                      <button key={i} onClick={() => {document.getElementById(t.id)?.scrollIntoView({behavior:'smooth'})}} className="whitespace-nowrap px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#D4AF37]/30 text-[#D4AF37] uppercase bg-black/10 active:bg-white/10">{t.text}</button>
+                      <button key={i} onClick={() => {document.getElementById(t.id)?.scrollIntoView({behavior:'smooth'})}} className="whitespace-nowrap px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#D4AF37]/30 text-[#D4AF37] uppercase bg-black/20">{t.text}</button>
                     ))}
                   </div>
                 )}
               </div>
               <main ref={scrollRef} className="main-content animate-in" style={{ backgroundColor: theme.bg }}>
-                <div className="max-w-md mx-auto p-5 pb-10">
+                <div className="max-w-md mx-auto p-5 pb-20">
                   {page.cards.map((card, idx) => (
                     <div key={idx} style={{backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.cardBg}} className="mb-6 p-6 border-[3px] border-double border-[#D4AF37]/40 rounded-[2.2rem] shadow-sm">
                       {card.content.map((block, bIdx) => renderBlock(block, bIdx, block._jumpId))}
@@ -2149,11 +2149,9 @@
 
         const renderMenu = () => (
           <Fragment>
-            <div className="app-header">
-               <div className="header-content h-[80px]">
-                 <h1 className="font-heading font-bold text-[22px] text-[#D4AF37] tracking-widest uppercase mt-4">Qalb-e-Dua</h1>
-                 <button onClick={() => setShowSettings(true)} className="absolute right-6 top-10 active:scale-90"><IconSettings /></button>
-               </div>
+            <div className="app-header h-[90px] flex items-center justify-center relative">
+               <h1 className="font-heading font-bold text-[22px] text-[#D4AF37] tracking-widest uppercase mt-4">Qalb-e-Dua</h1>
+               <button onClick={() => setShowSettings(true)} className="absolute right-6 top-10 p-2"><IconSettings /></button>
             </div>
             <main ref={scrollRef} className="main-content" style={{ backgroundColor: theme.bg }}>
               <div className="max-w-md mx-auto p-6 pt-10 space-y-4">
@@ -2169,24 +2167,24 @@
         );
 
         return (
-          <div className="flex flex-col h-full bg-[#0B1E3F]">
+          <div id="root">
             {activePageId ? renderPage() : renderMenu()}
             <footer className="app-footer"></footer>
 
             {showSettings && (
               <div className="modal-overlay" onClick={() => setShowSettings(false)}>
-                <div className="w-full max-w-sm bg-white rounded-t-[35px] p-8 pb-12 animate-in" onClick={e => e.stopPropagation()} style={{ backgroundColor: theme.bg, color: theme.text }}>
+                <div className="w-full max-w-sm bg-white rounded-t-[40px] p-8 pb-12 animate-in" onClick={e => e.stopPropagation()} style={{ backgroundColor: theme.bg, color: theme.text }}>
                   <h3 className="text-center font-heading font-bold text-lg mb-8 tracking-widest">SETTINGS</h3>
                   <div className="mb-8 text-center">
-                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4 text-center">Script Size</p>
+                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4">Font Size</p>
                     <div className="flex items-center justify-between bg-black/5 rounded-2xl p-2">
-                       <button onClick={() => setFontScale(s => Math.max(s-2, -6))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl active:scale-90">-</button>
+                       <button onClick={() => setFontScale(s => Math.max(s-2, -6))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl active:bg-gray-200">-</button>
                        <span className="font-arabic text-2xl font-bold">بِسْمِ</span>
-                       <button onClick={() => setFontScale(s => Math.min(s+2, 14))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl active:scale-90">+</button>
+                       <button onClick={() => setFontScale(s => Math.min(s+2, 16))} className="w-14 h-14 bg-white rounded-xl shadow-sm text-black font-bold text-2xl active:bg-gray-200">+</button>
                     </div>
                   </div>
                   <div className="mb-10 text-center">
-                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4 text-center">Theme Color</p>
+                    <p className="text-[10px] font-bold uppercase tracking-widest opacity-40 mb-4">Themes</p>
                     <div className="flex justify-around">
                       <button onClick={() => setTheme(THEMES.cream)} className={`theme-btn ${theme.id==='cream'?'active':''}`} style={{backgroundColor:'#FCFBF4'}} />
                       <button onClick={() => setTheme(THEMES.white)} className={`theme-btn ${theme.id==='white'?'active':''}`} style={{backgroundColor:'#FFF'}} />
